--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,24 @@
-Django==1.11.18
-Pillow==5.3.0
-social-auth-app-django==3.1.0
-django-crispy-forms==1.7.2
+autopep8==1.4.3
 bcrypt==3.1.6
+certifi==2018.11.29
+cffi==1.12.0
+chardet==3.0.4
+defusedxml==0.5.0
+Django==1.11.17
+django-crispy-forms==1.7.2
+idna==2.8
+oauthlib==3.0.1
+Pillow==5.4.1
+pycodestyle==2.5.0
+pycparser==2.19
+PyJWT==1.7.1
+python3-openid==3.1.0
+pytz==2018.9
+requests==2.21.0
+requests-oauthlib==1.2.0
+six==1.12.0
+social-auth-app-django==3.1.0
+social-auth-core==3.0.0
+sweetify==1.0.3
+urllib3==1.24.1
+wincertstore==0.2
